vpc.tf
resource "aws_vpc" "customVPC" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"

  tags = {
    Name = "customVPC"
  }
}

resource "aws_internet_gateway" "customIGW" {
  vpc_id = aws_vpc.customVPC.id

  tags = {
    Name = "customIGW"
  }
}

resource "aws_route_table" "publicRT" {
  vpc_id = aws_vpc.customVPC.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.customIGW.id
  }

  tags = {
    Name = "publicRT"
  }
}

resource "aws_subnet" "subnet1" {
  vpc_id                  = aws_vpc.customVPC.id
  cidr_block              = var.subnet1_cidr
  availability_zone       = var.AZ1
  map_public_ip_on_launch = true

  tags = {
    Name = "subnet1"
  }
}

resource "aws_subnet" "subnet2" {
  vpc_id            = aws_vpc.customVPC.id
  cidr_block        = var.subnet2_cidr
  availability_zone = var.AZ2

  tags = {
    Name = "subnet2"
  }
}

resource "aws_route_table_association" "subnet1" {
  subnet_id      = aws_subnet.subnet1.id
  route_table_id = aws_route_table.publicRT.id
}

resource "aws_security_group" "PublicEC2SG" {
  name        = "CustomPublicEC2SGTerraform"
  description = "Allow inbound traffic in 22,80 and all outbound traffic"
  vpc_id      = aws_vpc.customVPC.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
